--- a/views/website/add.pug
+++ b/views/website/add.pug
@@ -27,117 +27,117 @@ block css
 block content
 
     h1= title
-    
-    fieldset.form-group
+    div.row
+        fieldset.form-group.col-md
 
-        legend Basic Information (IMPORTANT)
+            legend Basic Information (IMPORTANT)
 
-        div.form-group
-            label(for="website_name") Website Name 
-            input#website_name(type="text", name="website_name", required="required", class="form-control")
-        
-        div.form-group
-            label(for="website_url") Website Url
-            input#website_url(type="text", name="website_url", required="required", class="form-control")
+            div.form-group
+                label(for="website_name") Website Name 
+                input#website_name(type="text", name="website_name", required="required", class="form-control")
+            
+            div.form-group
+                label(for="website_url") Website Url
+                input#website_url(type="text", name="website_url", required="required", class="form-control")
 
-        div.form-group
-            label(for="fqdn") FQDN
-            input#fqdn(type="text", name="fqdn", disabled="disabled", class="form-control")
-        
-        div.form-group
-            label(for="category") Category
-            select#category(name="category", class="form-control")
-                option(value="News") News
-                option(value="Blog") Blog
-        
-        div.form-group
-            label(for="region") Region
-            input#region(type="text", name="region", required="required", class="form-control")
+            div.form-group
+                label(for="fqdn") FQDN
+                input#fqdn(type="text", name="fqdn", disabled="disabled", class="form-control")
+            
+            div.form-group
+                label(for="category") Category
+                select#category(name="category", class="form-control")
+                    option(value="News") News
+                    option(value="Blog") Blog
+            
+            div.form-group
+                label(for="region") Region
+                input#region(type="text", name="region", required="required", class="form-control")
 
-        div.form-group
-            label(for="country") Country
-            input#country(type="text", name="country", required="required", class="form-control")
+            div.form-group
+                label(for="country") Country
+                input#country(type="text", name="country", required="required", class="form-control")
 
-        div.form-group
-            label(for="needs_endslash") Needs End Slash
-            select#needs_endslash(name="needs_endslash", class="form-control")
-                option(value="false") False
-                option(value="true") True
+            div.form-group
+                label(for="needs_endslash") Needs End Slash
+                select#needs_endslash(name="needs_endslash", class="form-control")
+                    option(value="false") False
+                    option(value="true") True
 
-    fieldset.form-group
+        fieldset.form-group.col-md
 
-        legend Scraper Information (VERY IMPORTANT)
+            legend Scraper Information (VERY IMPORTANT)
 
-        //- div.form-group
-        //-     label(for="scraper_setting") Scraper Setting
-        //-     select#scraper_setting(name="scraper_setting", class="form-control")
-        //-         option(value="REGEX_CONFIG") REGEX_CONFIG
-        //-         option(value="SECTION_CONFIG") SECTION_CONFIG
-        //-         option(value="BOTH_CONFIG") BOTH_CONFIG
+            //- div.form-group
+            //-     label(for="scraper_setting") Scraper Setting
+            //-     select#scraper_setting(name="scraper_setting", class="form-control")
+            //-         option(value="REGEX_CONFIG") REGEX_CONFIG
+            //-         option(value="SECTION_CONFIG") SECTION_CONFIG
+            //-         option(value="BOTH_CONFIG") BOTH_CONFIG
 
-        div.form-group
-            label(for="has_subsection") Has Subsection
-            select#has_subsection(name="has_subsection", class="form-control")
-                option(value="false") False
-                option(value="true") True
+            div.form-group
+                label(for="has_subsection") Has Subsection
+                select#has_subsection(name="has_subsection", class="form-control")
+                    option(value="false") False
+                    option(value="true") True
 
-        div.form-group
-            label(for="section_config") Main Section Config
-            .form-group
-                label(for="section_config_starts") Skip url starts with
-                textarea#section_config_starts.form-control(name="section_config_starts", cols="30", rows="5")
-            .form-group
-                label(for="section_config_ends") Skip url ends with
-                textarea#section_config_ends.form-control(name="section_config_ends", cols="30", rows="5")
-            .form-group
-                label(for="section_config_contains") Skip url contains with
-                textarea#section_config_contains.form-control(name="section_config_contains", cols="30", rows="5")
-            .form-group
-                label(for="section_config_exact") Skip exact url
-                textarea#section_config_exact.form-control(name="section_config_exact", cols="30", rows="5")
-            .form-group
-                label(for="section_config_accept") Accept Only
-                textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")
-            .form-group
-                label(for="section_regex_include") Regex Include Only
-                textarea#section_regex_include.form-control(name="section_regex_include", cols="30", rows="5")
-            .form-group
-                label(for="section_regex_exclude") Regex Exclude Only
-                textarea#section_regex_exclude.form-control(name="section_regex_exclude", cols="30", rows="5")
-        
-        div.form-group
-            label(for="section_config") Sub Section Config
-            .form-group
-                label(for="section_config_starts2") Skip url starts with
-                textarea#section_config_starts2.form-control(name="section_config_starts2", cols="30", rows="5")
-            .form-group
-                label(for="section_config_ends2") Skip url ends with
-                textarea#section_config_ends2.form-control(name="section_config_ends2", cols="30", rows="5")
-            .form-group
-                label(for="section_config_contains2") Skip url contains with
-                textarea#section_config_contains2.form-control(name="section_config_contains2", cols="30", rows="5")
-            .form-group
-                label(for="section_config_exact2") Skip exact url
-                textarea#section_config_exact2.form-control(name="section_config_exact2", cols="30", rows="5")
-            .form-group
-                label(for="section_config_accept2") Accept Only
-                textarea#section_config_accept2.form-control(name="section_config_accept2", cols="30", rows="5")
-            .form-group
-                label(for="section_regex_include2") Regex Include Only
-                textarea#section_regex_include2.form-control(name="section_regex_include2", cols="30", rows="5")
-            .form-group
-                label(for="section_regex_exclude2") Regex Exclude Only
-                textarea#section_regex_exclude2.form-control(name="section_regex_exclude2", cols="30", rows="5")
-        
-        div.form-group
-            label(for="main_sections") Main Sections
-            textarea#main_sections.form-control(name="main_sections", cols="30", rows="5")
+            div.form-group
+                label(for="section_config") Main Section Config
+                .form-group
+                    label(for="section_config_starts") Skip url starts with
+                    textarea#section_config_starts.form-control(name="section_config_starts", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_ends") Skip url ends with
+                    textarea#section_config_ends.form-control(name="section_config_ends", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_contains") Skip url contains with
+                    textarea#section_config_contains.form-control(name="section_config_contains", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_exact") Skip exact url
+                    textarea#section_config_exact.form-control(name="section_config_exact", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_accept") Accept Only
+                    textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")
+                .form-group
+                    label(for="section_regex_include") Regex Include Only
+                    textarea#section_regex_include.form-control(name="section_regex_include", cols="30", rows="5")
+                .form-group
+                    label(for="section_regex_exclude") Regex Exclude Only
+                    textarea#section_regex_exclude.form-control(name="section_regex_exclude", cols="30", rows="5")
+            
+            div.form-group
+                label(for="section_config") Sub Section Config
+                .form-group
+                    label(for="section_config_starts2") Skip url starts with
+                    textarea#section_config_starts2.form-control(name="section_config_starts2", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_ends2") Skip url ends with
+                    textarea#section_config_ends2.form-control(name="section_config_ends2", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_contains2") Skip url contains with
+                    textarea#section_config_contains2.form-control(name="section_config_contains2", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_exact2") Skip exact url
+                    textarea#section_config_exact2.form-control(name="section_config_exact2", cols="30", rows="5")
+                .form-group
+                    label(for="section_config_accept2") Accept Only
+                    textarea#section_config_accept2.form-control(name="section_config_accept2", cols="30", rows="5")
+                .form-group
+                    label(for="section_regex_include2") Regex Include Only
+                    textarea#section_regex_include2.form-control(name="section_regex_include2", cols="30", rows="5")
+                .form-group
+                    label(for="section_regex_exclude2") Regex Exclude Only
+                    textarea#section_regex_exclude2.form-control(name="section_regex_exclude2", cols="30", rows="5")
+            
+            div.form-group
+                label(for="main_sections") Main Sections
+                textarea#main_sections.form-control(name="main_sections", cols="30", rows="5")
 
-        div.form-group
-            label(for="sub_sections") Sub Sections
-            textarea#sub_sections.form-control(name="sub_sections", cols="30", rows="5")
+            div.form-group
+                label(for="sub_sections") Sub Sections
+                textarea#sub_sections.form-control(name="sub_sections", cols="30", rows="5")
 
-    button#add(type="button" class="btn btn-medium btn-primary") Add
+    button#add(type="button" class="btn btn-outline-primary btn-rounded waves-effect", style="position:fixed; bottom:10px; right:10px") Add
     
 block js
     script(src="/resources/string/dist/string.min.js")
