add and updated

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,8 @@ html
         a.nav-link.active(href='/') Home
       li.nav-item
         a.nav-link(href="/admin/add") Add Website
+      li.nav-item
+        a.nav-link(href="/article") Articles
     
     .container
       block content
