updated index.js and website/index.pug

--- a/views/website/index.pug
+++ b/views/website/index.pug
@@ -27,6 +27,7 @@ block content
       tr
         th WEBSITE ID
         th WEBSITE NAME
+        th Action
     tbody
       each d in data
        tr
